fix(python): legacy tasks did not handle correctly output files